--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -64,11 +64,43 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_toLeftOf="@+id/price"/>
 
+            <LinearLayout
+                android:id="@+id/options_layout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_below="@id/discription"
+                android:layout_margin="@dimen/_10sdp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/minus"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:src="@drawable/ic_outline_remove_circle_outline_24"
+                    android:tint="@color/colorPrimary"/>
+                <TextView
+                    android:id="@+id/quantity"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12sdp"
+                    android:text="12"/>
+                <ImageView
+                    android:id="@+id/add"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:src="@drawable/ic_baseline_add_circle_outline_24"
+                    android:tint="@color/colorPrimary"/>
+
+            </LinearLayout>
+
         <Button
-            android:id="@+id/add_to_cart"
+            android:id="@+id/remove"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_30sdp"
-            android:layout_below="@id/discription"
+            android:layout_below="@id/options_layout"
             android:paddingLeft="@dimen/_10sdp"
             android:paddingRight="@dimen/_10sdp"
             android:layout_alignParentRight="true"
@@ -76,7 +108,7 @@
             android:background="@drawable/button_bg"
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/white"
-            android:text="Add to cart"
+            android:text="Remove"
             android:layout_marginBottom="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginRight="@dimen/_10sdp"/>
